--- a/assets/css/money-rank.css
+++ b/assets/css/money-rank.css
@@ -24,8 +24,20 @@ a { text-decoration: none; color: #EC5C93; }
   -moz-border-radius: 4px;
   border-radius: 4px;
   padding: 9px 0px;
-  width: 18%;
+  width: 10%;
   height: 16px;
+}
+
+.bar-username {
+  float: left;
+  background: rgba(0,0,0,0.13);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding: 9px 0px;
+  width: 15%;
+  height: 16px;
+  margin-right: 2px;
 }
 
 .bar-container {
@@ -35,7 +47,7 @@ a { text-decoration: none; color: #EC5C93; }
   border-radius: 10px;
   height: 10px;
   background: rgba(0,0,0,0.13);
-  width: 78%;
+  width: 68%;
   margin: 12px 0px;
   overflow: hidden;
 }
