--- a/assets/css/money-rank.css
+++ b/assets/css/money-rank.css
@@ -1,5 +1,13 @@
+body {
+  background-color:#fff;
+  -webkit-font-smoothing: antialiased;
+  font: normal 20px Roboto,arial,sans-serif;
+  color: #26A529;
+  background: #F1F3FA;
+}
+
 #container { text-align: center; margin: 20px; }
-h2 { color: #CCC; }
+h2 { color: #26A529; }
 a { text-decoration: none; color: #EC5C93; }
 
 .bar-main-container {
@@ -64,6 +72,34 @@ a { text-decoration: none; color: #EC5C93; }
   -moz-opacity: 1;
   -khtml-opacity: 1;
   opacity: 1;
+}
+
+
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.btn-success {
+    background-color: #26A529;
+    border-color: #9EE61A;
 }
 
 /* COLORS */
