--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,7 @@
 /*Ha Na's CSS*/
 @import url(http://fonts.googleapis.com/css?family=Roboto:400);
 body {
-  background-color:#fff;
+  background-color:#E3F1EA;
   -webkit-font-smoothing: antialiased;
   font: normal 14px Roboto,arial,sans-serif;
 }
@@ -51,10 +51,6 @@ h4 {
     width: 400px;
     margin: 0 auto;
     margin-top: 100px;
-}
-
-body {
-  background: #F1F3FA;
 }
 
 /* Profile container */
@@ -162,7 +158,7 @@ body {
 }
 
 .comp-list-wrapper {
-    margin: 20px 10px 10px 10px;
+    margin: 50px 10px 10px 10px;
 
 }
 .panel-heading{
@@ -198,6 +194,23 @@ body {
   padding: 15px;
   font-size: 20px;
 }
-.trophy{
+.trophy img{
   max-height: 50px;
+  border-radius: 50%;
+}
+.trophy-title{
+  font-size: 20px;
+  color: #7D7D7D;
+}
+.profile-content h3{
+  font-size: 16px;
+  color: #7D7D7D;
+  padding-bottom: 10px;
+}
+.title{
+  font-size: 24px;
+  text-align: center;
+}
+.break50px{
+  height: 50px;
 }
